--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,6 @@ pluginManagement {
         }
     }
 }
-rootProject.name = 'TrikotSample'
+rootProject.name = 'NWAD'
 
 include ':android', 'common'
