--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,6 +46,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        compose true
     }
 
     lintOptions {
@@ -81,14 +82,27 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
 
-    implementation "com.mirego.trikot:android-ktx:$trikot_streams_android_ktx_version"
-    implementation "com.mirego.trikot.viewmodels:android-ktx:$trikot_viewmodels_android_ktx_version"
-    implementation "com.mirego.trikot.http:android-ktx:$trikot_http_android_ktx_version"
-    implementation "com.mirego.trikot.kword:android-ktx:$trikot_kword_android_ktx_version"
-
     implementation 'com.google.android.material:material:1.2.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
+    // Material Design
+    implementation 'androidx.compose.material:material:1.0.0-beta01'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02'
+    // Integration with observables
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta01'
 }
 
 ktlint {
