--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,23 @@ kotlin.code.style=official
 kotlin_version = 1.4.32
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
+kotlin.mpp.stability.nowarn=true
+kotlin.js.compiler=ir
+kotlin.js.ir.dce=true
+
 serialization_version=1.1.0
 mockk_version=1.10.3-jdk8
 lifecycle_version=2.2.0
-trikot_foundation_version=2.0.3
-trikot_analytics_version=2.0.2
-trikot_streams_version=2.0.5
-trikot_viewmodels_declarative_version=0.0.9
-trikot_http_version=2.0.3
-trikot_kword_version=2.0.0
+
+trikot_foundation_version=2.0.4
+trikot_streams_version=2.0.6
+trikot_viewmodels_version=2.0.12
+trikot_http_version=2.0.2
+trikot_kword_version=2.0.1
 trikot_framework_name=NwadFramework
+
+react_version=17.0.2-pre.154
+
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
