--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ trikot_streams_version=2.0.6
 trikot_viewmodels_version=2.0.12
 trikot_http_version=2.0.2
 trikot_kword_version=2.0.1
+trikot_viewmodels_declarative_version=0.0.9
 trikot_framework_name=NwadFramework
 
 react_version=17.0.2-pre.154
