--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,7 +46,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
-        compose true
+//        compose true
     }
 
     lintOptions {
@@ -104,5 +104,7 @@ dependencies {
 }
 
 ktlint {
+    disabledRules = ["import-ordering"]
+
     android = true
 }
