--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-multiplatform'
     id 'kotlinx-serialization'
     id 'org.jlleitschuh.gradle.ktlint'
-    id 'mirego.kword' version '0.5'
+    id 'mirego.kword' version '2.0.1'
     id 'jacoco'
 }
 
@@ -38,6 +38,10 @@ kword {
     translationFile 'src/commonMain/resources/translations/translation.en.json'
     enumClassName 'com.mirego.nwad.localization.KWordTranslation'
     generatedDir 'src/commonMain/generated'
+}
+
+ktlint {
+    disabledRules = ["import-ordering"]
 }
 
 kotlin {
