--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
+org.gradle.java.home=/Users/mgagnon/Downloads/Android Studio Preview.app/Contents/jre/Contents/Home
+
+jetpack_compose_version=1.0.0-beta06
