--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,24 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'kotlin-android'
+    id "org.jetbrains.kotlin.kapt"
     id 'kotlinx-serialization'
     id 'org.jlleitschuh.gradle.ktlint'
-    id 'androidx.navigation.safeargs.kotlin'
 }
+
+repositories {
+    maven { url('https://s3.amazonaws.com/mirego-maven/public') }
+    mavenCentral()
+    mavenLocal()
+    google()
+}
+
 
 android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.mirego.nwad"
+        applicationId "com.mirego.nwad.android"
         versionCode 1
         versionName "1.0"
         archivesBaseName = "NwadFramework-$versionCode"
@@ -37,15 +44,8 @@ android {
         }
     }
 
-    packagingOptions {
-        pickFirst 'META-INF/androidx.customview_customview.version'
-        pickFirst 'META-INF/androidx.legacy_legacy-support-core-ui.version'
-        exclude 'META-INF/*.kotlin_module'
-    }
 
     buildFeatures {
-        viewBinding true
-        dataBinding true
         compose true
     }
 
@@ -55,17 +55,23 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     repositories {
         maven { url('https://s3.amazonaws.com/mirego-maven/public') }
         mavenLocal()
+        google()
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11
+        useIR = true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "$jetpack_compose_version"
     }
 }
 
@@ -75,34 +81,29 @@ configurations.all {
 
 dependencies {
     api project(':common')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
-
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-    implementation 'androidx.compose.ui:ui:1.0.0-beta06'
-    // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta06'
-    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta06'
-    // Material Design
-    implementation 'androidx.compose.material:material:1.0.0-beta06'
-    // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta06'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta06'
-    // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
-    // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha04'
-    // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta06'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta06'
+    implementation "com.mirego.trikot:viewmodels-declarative-compose:$trikot_viewmodels_declarative_version"
+    implementation "androidx.activity:activity-compose:1.3.0-alpha07"
+    implementation "androidx.compose.runtime:runtime:$jetpack_compose_version"
+    implementation "androidx.compose.ui:ui:$jetpack_compose_version"
+    implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
+    implementation "androidx.compose.foundation:foundation-layout:$jetpack_compose_version"
+    implementation "androidx.compose.material:material:$jetpack_compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$jetpack_compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$jetpack_compose_version"
+    implementation "com.google.android.material:compose-theme-adapter:$jetpack_compose_version"
 }
 
 ktlint {
     android = true
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        useIR = true
+    }
 }
