--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,21 @@
 buildscript {
     repositories {
         google()
-        jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
     }
 
     dependencies {
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
-        classpath 'org.jlleitschuh.gradle:ktlint-gradle:9.1.1'
+        classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.0.0'
     }
 }
 
 repositories {
     google()
-    jcenter()
 }
 
 allprojects {
@@ -28,7 +26,6 @@ allprojects {
     }
     repositories {
         google()
-        jcenter()
         mavenLocal()
         maven { url "https://kotlin.bintray.com/kotlinx" }
     }
