Add list of images on iOS and Android

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,7 @@ target 'iosApp' do
   pod 'Trikot.viewmodels.declarative', :git => 'git@github.com:mirego/trikot.viewmodels.declarative.git', :commit => "b2916c2a7fbb394b2af194d29f1d5ca4eef209d6", :inhibit_warnings => true
   pod 'Trikot.streams', :git => 'git@github.com:mirego/trikot.streams.git', :tag => properties['trikot_streams_version'], :inhibit_warnings => true
   pod 'Trikot.kword', :git => 'git@github.com:mirego/trikot.kword.git', :tag => properties['trikot_kword_version'], :inhibit_warnings => true
+  pod 'Kingfisher/SwiftUI', '~> 5.0'
 
   post_install do |installer|
     installer.pods_project.targets.each do |target|
