--- a/common/build.gradle
+++ b/common/build.gradle
@@ -106,6 +106,7 @@ kotlin {
                 api "com.mirego.trikot:viewmodels-declarative:$trikot_viewmodels_declarative_version"
                 api "com.mirego.trikot:http:$trikot_http_version"
                 api "com.mirego.trikot:kword:$trikot_kword_version"
+                implementation "com.mirego.trikot:graphql:$trikot_graphql_version"
                 implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
             }
             kotlin.srcDir(kword.generatedDir)
