--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ trikot_foundation_version=2.0.4
 trikot_streams_version=2.0.6
 trikot_http_version=2.0.2
 trikot_kword_version=2.0.1
+trikot_graphql_version=2.0.0
 trikot_viewmodels_declarative_version=0.0.9
 trikot_framework_name=NwadFramework
 
