--- a/ios/.swiftlint.yml
+++ b/ios/.swiftlint.yml
@@ -101,7 +101,7 @@ opt_in_rules:
   - strong_iboutlet
   #- switch_case_on_newline
   - toggle_bool
-  - trailing_closure
+  #- trailing_closure
   #- type_contents_order
   - unavailable_function
   - unneeded_parentheses_in_closure_argument
