--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,7 @@ target 'iosApp' do
 
   pod 'SwiftLint'
   pod 'NwadFramework', :path => '../common'
+  pod 'GoogleSignIn'
   pod 'Trikot.http', :git => 'git@github.com:mirego/trikot.http.git', :tag => properties['trikot_http_version'], :inhibit_warnings => true
   pod 'Trikot.viewmodels.declarative', :git => 'git@github.com:mirego/trikot.viewmodels.declarative.git', :commit => "b2916c2a7fbb394b2af194d29f1d5ca4eef209d6", :inhibit_warnings => true
   pod 'Trikot.streams', :git => 'git@github.com:mirego/trikot.streams.git', :tag => properties['trikot_streams_version'], :inhibit_warnings => true
