--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,14 +6,6 @@ plugins {
     id 'org.jlleitschuh.gradle.ktlint'
 }
 
-repositories {
-    maven { url('https://s3.amazonaws.com/mirego-maven/public') }
-    mavenCentral()
-    mavenLocal()
-    google()
-}
-
-
 android {
     compileSdkVersion 30
 
@@ -43,7 +35,6 @@ android {
             applicationIdSuffix ".debug"
         }
     }
-
 
     buildFeatures {
         compose true
@@ -86,7 +77,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "com.mirego.trikot:viewmodels-declarative-compose:$trikot_viewmodels_declarative_version"
-    implementation "androidx.activity:activity-compose:1.3.0-alpha07"
+    implementation "androidx.activity:activity-compose:1.3.0-beta01"
     implementation "androidx.compose.runtime:runtime:$jetpack_compose_version"
     implementation "androidx.compose.ui:ui:$jetpack_compose_version"
     implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
@@ -105,7 +96,7 @@ ktlint {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
         useIR = true
     }
 }
