--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,24 @@
 kotlin.code.style=official
-kotlin_version = 1.4.32
+kotlin_version = 1.5.10
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.stability.nowarn=true
-kotlin.js.compiler=ir
 kotlin.js.ir.dce=true
 
 serialization_version=1.1.0
-mockk_version=1.10.3-jdk8
+mockk_version=1.11.0
 lifecycle_version=2.2.0
 
-trikot_foundation_version=2.0.4
-trikot_streams_version=2.0.6
-trikot_http_version=2.0.2
-trikot_kword_version=2.0.1
-trikot_graphql_version=2.0.0
-trikot_datasources_version=2.0.0
-trikot_viewmodels_declarative_version=0.0.9
+trikot_foundation_version=2.1.0
+trikot_streams_version=2.1.0
+trikot_http_version=2.1.0
+trikot_kword_version=2.1.0
+trikot_graphql_version=2.1.0
+trikot_datasources_version=2.1.0
+trikot_viewmodels_declarative_version=0.0.11
 trikot_framework_name=NwadFramework
 
-react_version=17.0.2-pre.154
+react_version=17.0.2-pre.206
 
 android.useAndroidX=true
 android.enableJetifier=true
@@ -29,4 +28,4 @@ org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
 
-jetpack_compose_version=1.0.0-beta06
+jetpack_compose_version=1.0.0-beta08
