--- a/web/build.gradle
+++ b/web/build.gradle
@@ -8,11 +8,10 @@ buildscript {
     }
 
     dependencies {
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha15'
+        classpath 'com.android.tools.build:gradle:7.0.0-beta03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.gms:google-services:4.3.8'
         classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.0.0'
     }
 }
@@ -22,15 +21,6 @@ plugins {
     id 'com.github.node-gradle.node' version '3.1.0'
 }
 
-repositories {
-    google()
-    jcenter()
-    mavenLocal()
-    maven { url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/kotlin-js-wrappers" }
-    maven { url "https://kotlin.bintray.com/kotlinx" }
-    maven { url "https://s3.amazonaws.com/mirego-maven/public" }
-}
-
 dependencies {
     api project(":common")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
@@ -38,10 +28,10 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
 
-    implementation("org.jetbrains:kotlin-react:$react_version-kotlin-1.5.0")
-    implementation("org.jetbrains:kotlin-react-dom:$react_version-kotlin-1.5.0")
-    implementation("org.jetbrains:kotlin-react-router-dom:5.2.0-pre.154-kotlin-1.5.0")
-    implementation("org.jetbrains:kotlin-styled:5.2.3-pre.154-kotlin-1.5.0")
+    implementation("org.jetbrains.kotlin-wrappers:kotlin-react:$react_version-kotlin-$kotlin_version")
+    implementation("org.jetbrains.kotlin-wrappers:kotlin-react-dom:$react_version-kotlin-$kotlin_version")
+    implementation("org.jetbrains.kotlin-wrappers:kotlin-react-router-dom:5.2.0-pre.206-kotlin-$kotlin_version")
+    implementation("org.jetbrains.kotlin-wrappers:kotlin-styled:5.3.0-pre.206-kotlin-$kotlin_version")
 
     implementation(npm("exports-loader", "1.1.1"))
     implementation(npm("raw-loader", "4.0.2"))
