Update upload moment code for graphql

--- a/ios/iosApp/Info.plist
+++ b/ios/iosApp/Info.plist
@@ -68,5 +68,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Share your beautiful moment</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Share your beautiful moment</string>
 </dict>
 </plist>
