--- a/ios/.swiftlint.yml
+++ b/ios/.swiftlint.yml
@@ -5,6 +5,7 @@
 disabled_rules:
   - force_cast
   - function_body_length
+  - multiple_closures_with_trailing_closure
 
 # All opt-in rules are listed, with the ones we do not want commented out so we can know which rules we don't want and which rules are new when upgrading Swiftlint
 opt_in_rules:
