--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,25 @@
 kotlin.code.style=official
-#kotlin_version = 1.5.10
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.stability.nowarn=true
 kotlin.js.ir.dce=true
+kotlin.incremental.js.klib=false
 
-#serialization_version=1.1.0
-#mockk_version=1.11.0
-#lifecycle_version=2.2.0
-
-trikot_foundation_version=2.1.0
-trikot_streams_version=2.1.0
-trikot_http_version=2.1.0
-trikot_kword_version=2.1.0
-trikot_graphql_version=2.1.0
-trikot_datasources_version=2.1.0
-trikot_viewmodels_declarative_version=0.0.11
+trikot_foundation_version=2.2.3
+trikot_streams_version=2.2.6
+trikot_http_version=2.3.3
+trikot_datasources_version=2.3.2
+trikot_graphql_version=2.3.1
+trikot_kword_version=2.3.3
+trikot_viewmodels_declarative_version=0.0.20
 trikot_framework_name=NWADFramework
-
-#react_version=17.0.2-pre.206
 
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx3072m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
 
 #jetpack_compose_version=1.0.0-beta08
