--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,7 @@ kotlin.mpp.stability.nowarn=true
 kotlin.js.ir.dce=true
 kotlin.incremental.js.klib=false
 
-trikot_foundation_version=2.2.3
-trikot_streams_version=2.2.6
-trikot_http_version=2.3.3
-trikot_datasources_version=2.3.2
-trikot_graphql_version=2.3.1
-trikot_kword_version=2.3.3
-trikot_viewmodels_declarative_version=0.0.20
+trikot_version=3.1.0
 trikot_framework_name=NWADFramework
 
 android.useAndroidX=true
@@ -21,5 +15,3 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3072m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
-
-#jetpack_compose_version=1.0.0-beta08
